# video-to-image

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.py
.docs/: architecture.md
.docs/2026/01/28/01-video-to-image-spec/: ac.md  video-to-image-spec-implementation-plan.md  video-to-image-spec-spec.md
.docs/2026/01/28/02-uv-project-integration/: ac.md
.docs/2026/01/28/03-fix-interval-frame-skip/: ac.md
.docs/2026/01/28/04-c4-architecture-docs/: ac.md
src/: extractor.py
