[project]
name = "video-to-image"
version = "0.1.0"
description = "Extract frames from video files via command line"
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8.0",
    "tqdm>=4.65.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "numpy>=1.24.0",
]

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
